--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,18 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Philip Guo</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1>Gianne Rayandayan</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h4>Tryna Get a Job</h4>
 
 	<!-- p means paragraph -->
-	<p>Philip Guo is an assistant professor of cognitive science at UC San Diego (Go Tritons!). His research spans human-computer interaction, online learning, and computing education.</p>
+	<p>Designer who thinks HCI is a big circle jerk</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>Graphic Design</li>
+		<li>Illustration</li>
+		<li>UX/UI</li>
+		<li>Conceptual Computation</li>
 	</ol>
 </body>
 </html>
